# Project

./: AStar.cpp  AStar.h  Arena.cpp  Arena.h  Battle_on_the_chessboard.mdj  CMakeLists.txt  Game.cpp  Game.h  Graphics.cpp  Graphics.h  Librerie.cpp  Librerie.h  Map.cpp  Map.h  Menu.cpp  Menu.h  README.md  Screen.cpp  Screen.h  Strategy.cpp  Strategy.h  Text.cpp  Text.h  Token.cpp  Token.h  TurnSystem.cpp  TurnSystem.h  Untitled.mdj  main.cpp
Sprites/: Fortezza.pixil
UML/: Battle_on_the_chessboard.mdj  Reisende.mdj  Untitled.mdj
test/: AStarTest.cpp  CMakeLists.txt  TokenSuite.cpp  TokenTest.cpp  TurnSystemSuite.cpp  runAllTests.cpp
test/lib/googletest/cmake/: internal_utils.cmake
